--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6,17 +6,38 @@ body {
 
 h1 {
   font-size: 100px;
+  color: #ED1A7B;
+  text-shadow: 0 1px 0 #ccc,
+              0 2px 0 #c9c9c9,
+              0 3px 0 #bbb,
+              0 4px 0 #b9b9b9,
+              0 5px 0 #aaa,
+              0 6px 1px rgba(0,0,0,.1),
+              0 0 5px rgba(0,0,0,.1),
+              0 1px 3px rgba(0,0,0,.3),
+              0 3px 5px rgba(0,0,0,.2),
+              0 5px 10px rgba(0,0,0,.25),
+              0 10px 10px rgba(0,0,0,.2),
+              0 20px 20px rgba(0,0,0,.15);
+}
+
+h2 {
+  text-decoration: underline;
 }
 
 div {
   margin: 30px;
 }
 
+p {
+  color: white;
+}
+
 a,
 a:visited {
   color: #FFFFFF;
   text-decoration: none;
-  margin: 20px;
+  margin: 50px;
 }
 
 .container {
@@ -49,5 +70,5 @@ a:visited {
 }
 
 #join {
-  margin: 20px;
+  margin: 50px;
 }
